Cleaned up refuse code